# forecast-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  _config.yaml  benthos.yaml  create_stream.json  docker-compose.yml  init-table.sh  stream_create.json  stream_query.json
flowchart/: flow.drawio
site/: index.html  viz.js
src/: main.rs
src/api_processor/: kafka.rs  mod.rs  request.rs
