[package]
name = "forecast-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.4.0-rc1"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.0", features = ["full"] }
