[package]
name = "forecast-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clokwerk = "0.4.0-rc1"
futures = "0.3.21"
itertools = "0.10.3"
rdkafka = "0.28.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
